--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.2",
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
