--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "array-move": "^3.0.1",
     "bootstrap": "^4.5.2",
     "mdbootstrap": "^4.19.1",
     "mdbreact": "^4.27.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-sortable-hoc": "^1.11.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
