--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -15,13 +12,12 @@
     "@types/react-dom": "^16.9.8",
     "array-move": "^3.0.1",
     "bootstrap": "^4.5.2",
-    "font-awesome": "5.14.0",
-    "mdbootstrap": "^4.19.1",
-    "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-pro-sidebar": "^0.4.3",
     "react-scripts": "3.4.1",
     "react-sortable-hoc": "^1.11.0",
     "typescript": "^3.9.7"
