--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
-    "react-sortable-hoc": "^1.11.0",
+    "react-sortablejs": "^2.0.11",
+    "sortablejs": "^1.6.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
