--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.4.1",
     "react-sortablejs": "^2.0.11",
     "sortablejs": "^1.6.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.0"
   }
 }
