--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "array-move": "^3.0.1",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sortablejs": "^2.0.11",
     "sortablejs": "^1.6.1",
