--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.5",
     "array-move": "^3.0.1",
     "bootstrap": "^4.5.2",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,5 +51,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0"
-  }
+  },
+  "homepage": "https://abhijeetsrivastava.github.io/todo-app/"
 }
